# docstring_generator

./: .gitignore  LICENSE  README.md  license.md  pyproject.toml  requirements.txt  setup.py  tmp.py
.github/workflows/: python-publish-ext.yml  python-publish.yml
docstring_generator/: __init__.py  __main__.py  config.py  docstring_generator.py  docstring_utils.py  function_cache.py  gen_docs.py  new_gen_docs.py
examples/: class_only_before.py  class_only_numpy_style_after.py  example_file_after.py  example_file_before.py  functions_only_before.py  functions_only_numpy_style_after.py  functions_only_rest_style_after.py  mixed_before.py  mixed_before_tmp.py  mixed_numpy_style_after.py
src/: CMakeLists.txt  docstringFormat.cpp  docstringFormat.hpp  docstring_utils.py  example.cpp  gen_docs.py  tmp.py
tests/: __init__.py  conftest.py  file_a.py  test_caching.py  test_docstring_generator.py
tests/files/: class_only.py  functions_only.py  mixed.py
tests/tmp/: __init__.py  file_a.py  file_a_broken_after_second_iter.py  file_a_one_iteration.py  tmp.py
